--- a/style.css
+++ b/style.css
@@ -74,6 +74,34 @@ main {
   margin-top: 10px;
   font-size: 28px;
 }
+.forecast {
+  display: flex;
+  justify-content: space-around;
+}
+.forecast-date {
+  text-align: center;
+  color: rgba(39, 33, 66, 0.4);
+  font-size: 16px;
+  line-height: 24px;
+  margin-top: 20px;
+}
+
+.forecast-icon {
+  text-align: center;
+  font-size: 40px;
+}
+.forecast-temperatures {
+  text-align: center;
+  color: #f65282;
+  font-size: 18px;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+}
+.forecast-temperature {
+  padding: 0 5px;
+}
+
 footer {
   border-top: 1px solid #f9f7fe;
   padding: 30px 0 0 0;
