--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ main {
   margin-top: 10px;
   font-size: 28px;
 }
-.forecast {
+.weather-forecast {
   display: flex;
   justify-content: space-around;
 }
